@@ -9,6 +9,9 @@ What's New in Stackless 3.X.X?
 
 *Release date: 20XX-XX-XX*
 
+- https://github.com/stackless-dev/stackless/issues/182
+  Fix "make teststackless" for out of tree builds
+
 - https://github.com/stackless-dev/stackless/issues/180
   Deprecate stackless.pickle_with_tracing_state. It has been replaced by
   stackless.pickle_flags() and stackless.pickle_flags_default().
